--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "azure-middleware",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "Node.js middleware engine for Azure Functions",
-  "keywords": ["azure", "middlewares", "middleware handler", "middleware engine", "azure functions"],
+  "keywords": [
+    "azure",
+    "middlewares",
+    "middleware handler",
+    "middleware engine",
+    "azure functions"
+  ],
   "engines": {
     "node": "8.9.4",
     "npm": "6.5.0"
@@ -51,7 +57,7 @@
     "istanbul": "^0.4.3",
     "mocha": "^5.0.1",
     "mocha-lcov-reporter": "^1.2.0",
-    "nyc": "^13.1.0",
+    "nyc": "^14.1.1",
     "prettier": "^1.8.2",
     "prettier-eslint": "^8.2.1"
   },
