--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
     "npm": ">=6.5.0"
   },
   "scripts": {
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
-    "lint": "./node_modules/eslint/bin/eslint.js \"**/*.js\"",
-    "lint-diff": "git diff --name-only --cached --relative | grep \\\\.js$ | xargs ./node_modules/eslint/bin/eslint.js",
-    "lint-fix": "./node_modules/eslint/bin/eslint.js \"**/*.js\" --fix",
-    "precommit": "npm run lint-diff",
+    "build": "rimraf ./dist && tsc",
+    "eslint-check": "eslint --print-config .eslintrc.yml | eslint-config-prettier-check",
+    "lint": "prettier src tests --write && eslint \"{src,tests}/*\" --ext \".ts\" --fix",
     "outdated": "npm outdated --depth 0",
     "pretest": "npm run lint",
     "cover": "nyc --reporter=text npm test",
-    "test": "NODE_ENV=testing ./node_modules/mocha/bin/_mocha test/index.test.js --timeout 6000 --exit",
-    "test-inspect": "NODE_ENV=testing node --inspect --debug-brk ./node_modules/mocha/bin/_mocha \"**/*.test.js\""
+    "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" NODE_ENV=testing mocha --require ts-node/register tests/**/*.test.ts --timeout 6000 --exit",
+    "test-inspect": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" NODE_ENV=testing node --inspect ./node_modules/mocha/bin/_mocha --require ts-node/register tests/**/*.test.ts",
+    "prepare": "husky install"
   },
   "cacheDirectories": [
     "node_modules"
@@ -40,6 +39,11 @@
     "url": "https://github.com/emanuelcasco/azure-middleware/issues"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@types/chai-spies": "^1.0.3",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.10.2",
     "babel": "6.23.0",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.2",
@@ -48,20 +52,30 @@
     "chai-http": "^4.2.0",
     "chai-spies": "^1.0.0",
     "coveralls": "^3.0.0",
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb-base": "^12.0.2",
-    "eslint-config-prettier": "^2.3.1",
-    "eslint-plugin-import": "^2.6.1",
-    "eslint-plugin-prettier": "^2.1.1",
-    "husky": "^0.14.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "husky": "^7.0.2",
     "istanbul": "^0.4.3",
+    "lint-staged": "^11.1.2",
     "mocha": "^5.0.1",
     "mocha-lcov-reporter": "^1.2.0",
     "nyc": "^14.1.1",
-    "prettier": "^1.8.2",
-    "prettier-eslint": "^8.2.1"
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "joi": "^14.3.0"
+    "@azure/functions": "^1.2.3",
+    "joi": "^17.4.2"
   }
 }
